# mbl_ed

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  input.ini  input.txt  main.cpp
src/: Analyzer.cpp  Analyzer.h  AnalyzerTask.h  Assertions.h  CMakeLists.txt  CavityHamiltonianGenerator.h  Config.cpp  FileUtils.h  FockBase.cpp  FockBase.h  FockBaseGenerator.cpp  FockBaseGenerator.h  GapRatioCalculator.cpp  GapRatioCalculator.h  HamiltonianGenerator.cpp  HamiltonianGenerator.h  InlineResultsPrinter.cpp  InlineResultsPrinter.h  Main.cpp  Parameters.cpp  Parameters.h  Quantity.cpp  Quantity.h  Simulation.h  Utils.cpp  Utils.h  main.cpp
src/analyzer/: Analyzer.cpp  Analyzer.h  AnalyzerTask.h  BandExtractor.cpp  BandExtractor.h  BulkAnalyzerTask.h  EigenvaluesExtractor.cpp  EigenvaluesExtractor.h  InlineAnalyzerTask.h
src/analyzer/tasks/: BulkMeanGapRatio.cpp  BulkMeanGapRatio.h  CDF.cpp  CDF.h  CorrelationsTimeEvolution.cpp  CorrelationsTimeEvolution.h  DressedStatesFinder.cpp  DressedStatesFinder.h  EDCorrelationsTimeEvolution.cpp  EDCorrelationsTimeEvolution.h  EDTimeEvolution.cpp  EDTimeEvolution.h  EigenstateObservables.cpp  EigenstateObservables.h  GapRatioCalculator.cpp  GapRatioCalculator.h  InverseParticipationRatio.cpp  InverseParticipationRatio.h  MeanGapRatio.cpp  MeanGapRatio.h  MeanInverseParticipationRatio.cpp  MeanInverseParticipationRatio.h  PDF.cpp  PDF.h  ParticipationEntropy.cpp  ParticipationEntropy.h
src/core/: AveragingModel.h  CavityConstants.h  DiagonalTerm.h  DisorderGenerator.h  DoubleHoppingTerm.h  Eigensystem.cpp  Eigensystem.h  FockBase.h  FockBaseGenerator.cpp  FockBasis.cpp  FockBasis.h  FockBasisGenerator.cpp  FockBasisGenerator.h  FockVector.cpp  FockVector.h  HamiltonianGenerator.cpp  HamiltonianGenerator.h  HoppingTerm.h  PrimaryObservable.h  QuenchCalculator.cpp  QuenchCalculator.h  RND.h  SecondaryObservable.h
src/core/averaging_models/: CavityConstantsAveragingModel.cpp  CavityConstantsAveragingModel.h  DummyAveragingModel.h  OnsiteDisorderAveragingModel.cpp  OnsiteDisorderAveragingModel.h  RandomPhi0AveragingModel.h  UniformPhi0AveragingModel.h
src/core/terms/: HubbardHop.h  (+19 more)
src/evolution/: ChebyshevEvolution.h  ChebyshevEvolutionParameters.h  ChebyshevEvolver.cpp  ChebyshevEvolver.h  CorrelationsTimeEntry.cpp  CorrelationsTimeEntry.h  CorrelationsTimeEvolution.cpp  CorrelationsTimeEvolution.h  CorrelationsTimeEvolutionParameters.cpp  CorrelationsTimeEvolutionParameters.h  EDEvolver.cpp  EDEvolver.h  EvolutionTimeSegment.h  Evolver.h  Observable.h  OccupationEvolution.cpp  OccupationEvolution.h  OservablesTimeEvolution.cpp  OservablesTimeEvolution.h  PrimaryObservable.h  QuenchCalculator.h  SecondaryObservable.h  SymmetricMatrix.h  TimeEvolution.cpp  TimeEvolution.h  TimeEvolutionEntry.cpp  TimeEvolutionEntry.h  TimeEvolutionParameters.cpp  TimeEvolutionParameters.h
src/frontend/: AnalyzerBuilder.cpp  AnalyzerBuilder.h  AveragingModelFactory.cpp  AveragingModelFactory.h  CavityConstantsReader.cpp  CavityConstantsReader.h  Frontend.cpp  Frontend.h  HamiltonianGeneratorBuilder.cpp  HamiltonianGeneratorBuilder.h  IO.cpp  IO.h  InlineResultsPrinter.cpp  ObservablesBuilder.cpp  ObservablesBuilder.h  Parameters.cpp  Parameters.h
src/simulation/: AveragingModel.h  AveragingModels.h  CavityConstants.cpp  CavityConstants.h  CavityHamiltonianGenerator.h  ChebyshevEvolution.h  DiagonalTerm.h  DisorderGenerator.h  DisorderGenerators.h  DoubleHoppingTerm.h  Eigensystem.cpp  Eigensystem.h  ExactDiagonalization.h  ExactDiagonalizationParameters.h  FockBase.cpp  FockBase.h  FockBaseGenerator.cpp  FockBaseGenerator.h  FockVector.cpp  FockVector.h  HamiltonianGenerator.cpp  HamiltonianGenerator.h  HoppingTerm.h  QuenchCalculator.cpp  QuenchCalculator.h  QuenchDataSimulation.h  RND.h  RandomStateObservables.cpp  RandomStateObservables.h  Restorable.h  RestorableHelper.h  RestorableSimulation.h  RestorableSimulationExecutor.cpp  RestorableSimulationExecutor.h  Simulation.h  SimulationParameters.h  SimulationsSpan.h
src/utils/: Config.cpp  Config.h  FileUtils.h  Fold.cpp  Fold.h  Logger.h  OMPMacros.h  Quantity.cpp  Quantity.h  Utils.cpp  Utils.h
test/: AnalyzerTaskMock.h  AnalzerTest.cpp  ArmaMatrixApproxEqualMatcher.h  CMakeLists.txt  CavityHamiltonianGeneratorTest.cpp  FileUtilsMock.h  FockBaseGeneratorTest.cpp  FockBaseTest.cpp  GapRatioCalculatorTest.cpp  HamiltonianGeneratorTest.cpp  OstringStreamMock.h  SimulationTest.cpp  TestMain.cpp
test/matchers/: ArmaApproxEqualCatchMatcher.h  ArmaApproxEqualMatcher.h  ArmaApproxEqualTrompeloeilMatcher.h  ArmaMatrixApproxEqualMatcher.h  FirstObservableValuesTrompeloeilMatcher.h  TrompeloeilMatchers.h  VectorApproxEqualCatchMatcher.h  VectorApproxEqualMatcher.h
test/mocks/: AnalyzerTaskMock.h  BulkAnalyzerTaskMock.h  DiagonalTermMock.h  DoubleHoppingTermMock.h  EvolverMock.h  FileUtilsMock.h  HoppingTermMock.h  InlineAnalyzerTaskMock.h  ObservableMock.h  OccupationEvolutionMock.h  OstringStreamMock.h  PrimaryObservableMock.h  RNDMock.h  RestorableSimulationMock.h  SecondaryObservableMock.h
test/object_mothers/: HamiltonianGeneratorMother.cpp  HamiltonianGeneratorMother.h
test/tests/: AnalzerTest.cpp  AveragingModelsTest.cpp  CDFTest.cpp  CavityConstantsReaderTest.cpp  CavityConstantsTest.cpp  CavityHamiltonianGeneratorTest.cpp  CavityLongInteractionTest.cpp  ChebyshevEvolutionTest.cpp  ChebyshevEvolverTest.cpp  ConfigTest.cpp  CorrelationsTimeEntryTest.cpp  CorrelationsTimeEvolutionTest.cpp  DressedStatesFinderTest.cpp  EigensystemTest.cpp  EvolversTest.cpp  FockBaseGeneratorTest.cpp  FockBaseTest.cpp  FockVectorTest.cpp  FoldTest.cpp  GapRatioCalculatorTest.cpp  HamiltonianGeneratorTest.cpp  HubbardHopTest.cpp  HubbardOnsite.cpp  InlineResultsPrinterTest.cpp  InverseParticipationRatioTest.cpp  ListOnsiteTest.cpp  LookupCavityY2Test.cpp  LookupCavityYZTest.cpp  LookupCavityZ2Test.cpp  MeanGapRatioTest.cpp  MeanInverseParticipationRatioTest.cpp  OccupationEvolutionTest.cpp  OnsiteDisorderTest.cpp  QuasiperiodicDisorderTest.cpp  QuenchCalculatorTest.cpp  SimulationTest.cpp  SymmetricMatrixTest.cpp
(+121 files in other folders)
